Fixed weird issue where the first button in the buttons container was skewed to the right slightly on Firefox.

--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
     margin: auto;
 }
 .buttons * {
+    display: block;
     width: 100%;
-    margin: 10px;
+    margin: 10px auto; /* top and bottom have margin of 10, button is automaically centered */
 }
